--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,56 +120,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x2180cb1a580>,\n",
-       " 'tobs': 65.0,\n",
-       " 'date': '2010-01-01',\n",
-       " 'station': 'USC00519397',\n",
-       " 'prcp': 0.08,\n",
-       " 'id': 1}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#prints out column and first row data to see what is there.\n",
-    "first_row=session.query(Measurement).first()\n",
-    "first_row.__dict__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x218096b7b20>,\n",
-       " 'elevation': 3.0,\n",
-       " 'name': 'WAIKIKI 717.2, HI US',\n",
-       " 'id': 1,\n",
-       " 'longitude': -157.8168,\n",
-       " 'station': 'USC00519397',\n",
-       " 'latitude': 21.2716}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "first_row_st=session.query(Station).first()\n",
-    "first_row_st.__dict__"
+    "# first_row=session.query(Measurement).first()\n",
+    "# first_row.__dict__\n",
+    "# first_row_st=session.query(Station).first()\n",
+    "# first_row_st.__dict__"
    ]
   },
   {
@@ -181,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +513,7 @@
        " '2017-08-17': 0.13}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +546,7 @@
        " <a list of 7 Text major ticklabel objects>)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -623,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +658,7 @@
        "max       6.700000"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -745,8 +704,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -762,7 +723,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -882,13 +843,10 @@
     "x=[each_result[0] for each_result in most_lastyear_tobs]\n",
     "\n",
     "# 3. Plot the results as a histogram with bins=12.\n",
-    "\n",
-    "plt.hist(x, bins = 12)\n",
+    "plt.hist(x, bins=12)\n",
     "plt.xlabel('Temperature')\n",
     "plt.ylabel('Frequency')\n",
-    "\n",
     "plt.show()\n",
-    "\n",
     "\n"
    ]
   },
@@ -901,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
